# commander

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pom.xml
commander-app/: pom.xml
commander-app/src/main/java/com/digitaloverwatch/commander/: CommanderApplication.java
commander-app/src/main/resources/: application.properties
commander-app/src/test/java/com/digitaloverwatch/commander/: CommanderApplicationTests.java
commander-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
doctrine/: CHANNEL-OUTPUT-DISCIPLINE-DRAFT.md  EXILE.md  PHASE-1-DECISION-LOG.md  PHASE-1-SLICE-4-A3-PLAN.md  PHASE-1-SLICE-4-B-PLAN.md  PHASE-1-SLICE-4-C-PLAN.md  RAPPORT-STATE-MODEL.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  crypto.rs  db.rs  inference.rs  lib.rs  main.rs  prompt.rs  vault.rs
src-tauri/src/crypto/: derive.rs  envelope.rs  kdf.rs
src-tauri/src/inference/: claude.rs
src/components/: ChannelPlaceholder.tsx  ChannelSurface.tsx  InconsistentError.tsx  OnboardingWizard.tsx  SummaryStanza.tsx  UnlockScreen.tsx
src/lib/: api.ts  calibration.ts
