[package]
name = "coo"
version = "0.1.0"
description = "COO — Personal Operator Companion"
authors = ["Digital Overwatch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix is required on Windows to avoid bin/lib name collision.
# See https://github.com/rust-lang/cargo/issues/8519
name = "coo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
dirs = "5"
thiserror = "1"

